Update SETUP.md with comprehensive installation and configuration guide
Co-authored-by: Adarsh-P-Thomson <131739584+Adarsh-P-Thomson@users.noreply.github.com>